style: Adjusted font size to avoid the "Game Pin" title wrapping

--- a/src/styles/LobbyPage.module.css
+++ b/src/styles/LobbyPage.module.css
@@ -63,7 +63,7 @@
 
 @media (orientation: portrait) {
     .pin {
-        font-size: 10vw;
+        font-size: 9vw;
         letter-spacing: 1vw;
     }
 
